--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,11 +1,14 @@
-%h1 Your Entered Time
+%h1
+  Your Entered Time
 %p
   = link_to "Enter New Time", new_task_path, :class => "btn btn-primary"
+  
 %table.table.table-striped.table-bordered
   %thead
     %tr
       %th Minutes
       %th Plant
+      %th Category
       %th Date
       %th Notes
       %th
@@ -17,9 +20,11 @@
       %tr
         %td= task.minutes
         %td= task.plant.present? ? task.plant.name : ""
+        %td= task.category
         %td= task.task_date.strftime("%b %d, %Y")
-        %td= task.notes
+        %td= truncate(task.notes)
         %td= link_to 'Show', task
         %td= link_to 'Edit', edit_task_path(task)
         %td= link_to 'Destroy', task, :confirm => 'Are you sure?', :method => :delete
+
 
