--- a/app/views/tasks/_form.mobile.haml
+++ b/app/views/tasks/_form.mobile.haml
@@ -7,7 +7,7 @@
           %li= msg
   = f.input :plant_id, :collection => current_user.plants
   = f.input :category, :collection => Task::CATEGORIES
-  = f.input :minutes, :placeholder => "Enter in hours", :label => "Hours"
+  = f.input :minutes, :placeholder => "Enter in minutes", :label => "Minutes"
   %div{:data => {:role => 'controlgroup', :type => 'vertical'}}
     = f.input :task_date, :as => :date, :label => "Date" 
   = f.input :notes, :input_html => { :rows => 4 }
